--- a/automations/occupancy-based-lighting/light_snzb_06p_rumpus_room_motion_cleared_lights_off.yaml
+++ b/automations/occupancy-based-lighting/light_snzb_06p_rumpus_room_motion_cleared_lights_off.yaml
@@ -3,18 +3,27 @@ triggers:
   - trigger: template
     value_template: |
       {{
-        is_state('binary_sensor.basement_rumpus_room_aqara_fp2_01_presence_sensor', 'off')
-        and is_state('binary_sensor.basement_rumpus_room_aqara_fp2_02_presence_sensor', 'off')
+        is_state('binary_sensor.basement_rumpus_room_aqara_fp2_02_presence_sensor', 'off')
         and is_state('binary_sensor.basement_rumpus_aqara_fp300_presence_presence', 'off')
         and is_state('binary_sensor.basement_rumpus_room_inovelli_presence_occupancy', 'off')
       }}
-    for: "00:05:00"
 conditions: []
 actions:
+  - delay: >-
+      {% set raw = states('input_select.basement_rumpus_room_occupancy_off_delay') %}
+      {% set d = raw | replace('"','') | replace("'","") | trim %}
+      {{ d if d not in ['unknown','unavailable',''] else '00:05:00' }}
+  - condition: template
+    value_template: |
+      {{
+        is_state('binary_sensor.basement_rumpus_room_aqara_fp2_02_presence_sensor', 'off')
+        and is_state('binary_sensor.basement_rumpus_aqara_fp300_presence_presence', 'off')
+        and is_state('binary_sensor.basement_rumpus_room_inovelli_presence_occupancy', 'off')
+      }}
   - action: light.turn_off
     target:
       entity_id: light.basement_rumpus_room_lights
   - action: light.turn_off
     target:
       entity_id: light.basement_rumpus_room_lamp
-mode: single
+mode: restart
