--- a/cards/basement/concessions/basement-concessions-advanced.yaml
+++ b/cards/basement/concessions/basement-concessions-advanced.yaml
@@ -29,11 +29,9 @@ cards:
       tap_action:
         action: navigate
         navigation_path: "#concessions-history"
-
   - type: markdown
     content: |
-      ### Sensors
-
+      ## Sensors
   - type: custom:bubble-card
     card_type: sub-buttons
     show_header_toggle: false
@@ -44,32 +42,13 @@ cards:
           buttons_layout: inline
           group:
             - entity: sensor.basement_concessions_qsensor_air_temperature
-              name: QSensor
+              name: QSensor Temp
               icon: mdi:thermometer
-              show_name: true
+              show_name: false
               show_state: true
               show_icon: true
               content_layout: icon-top
               custom_height: 60
-            - entity: sensor.basement_concessions_qsensor_humidity
-              name: QSensor
-              icon: mdi:water-percent
-              show_name: true
-              show_state: true
-              show_icon: true
-              content_layout: icon-top
-              custom_height: 60
-            - entity: sensor.basement_concessions_qsensor_illuminance
-              name: QSensor
-              icon: mdi:brightness-5
-              show_name: true
-              show_state: true
-              show_icon: true
-              content_layout: icon-top
-              custom_height: 60
-        - name: Inovelli State
-          buttons_layout: inline
-          group:
             - entity: sensor.basement_concessions_inovelli_presence_illuminance
               name: Inovelli
               icon: mdi:brightness-6
@@ -86,6 +65,25 @@ cards:
               show_icon: true
               content_layout: icon-top
               custom_height: 60
+        - name: Inovelli State
+          buttons_layout: inline
+          group:
+            - entity: sensor.basement_concessions_qsensor_humidity
+              name: QSensor Humidity
+              icon: mdi:water-percent
+              show_name: false
+              show_state: true
+              show_icon: true
+              content_layout: icon-top
+              custom_height: 60
+            - entity: sensor.basement_concessions_qsensor_illuminance
+              name: QSensor
+              icon: mdi:brightness-5
+              show_name: true
+              show_state: true
+              show_icon: true
+              content_layout: icon-top
+              custom_height: 60
             - entity: sensor.basement_concessions_inovelli_presence_overheat
               name: Overheat
               icon: mdi:thermometer-alert
@@ -96,83 +94,9 @@ cards:
               custom_height: 60
       bottom_layout: rows
     rows: 2.4
-
-  - type: markdown
-    content: >-
-      **Last mmWave Command:**   <small> {% set s =
-      states('sensor.basement_concessions_inovelli_presence_mmwave_control_commands')
-      %} {{ s if s not in ['unknown','unavailable',''] else '—' }} </small>
-
-  - type: custom:bubble-card
-    card_type: sub-buttons
-    show_header_toggle: false
-    sub_button:
-      main: []
-      bottom:
-        - name: mmWave Commands
-          buttons_layout: inline
-          group:
-            - name: Set Interference
-              icon: mdi:shield-outline
-              show_state: false
-              show_name: true
-              content_layout: icon-top
-              custom_height: 80
-              tap_action:
-                action: perform-action
-                perform_action: script.inovelli_mmwave_control
-                target: {}
-                data:
-                  device: basement_concessions_inovelli_presence
-                  command: set_interference
-            - name: Clear Interference
-              icon: mdi:shield-off-outline
-              show_state: false
-              show_name: true
-              content_layout: icon-top
-              custom_height: 80
-              tap_action:
-                action: perform-action
-                perform_action: script.inovelli_mmwave_control
-                target: {}
-                data:
-                  device: basement_concessions_inovelli_presence
-                  command: clear_interference
-            - name: Reset Area
-              icon: mdi:crop-free
-              show_state: false
-              show_name: true
-              content_layout: icon-top
-              custom_height: 80
-              tap_action:
-                action: perform-action
-                perform_action: script.inovelli_mmwave_control
-                target: {}
-                data:
-                  device: basement_concessions_inovelli_presence
-                  command: reset_detection_area
-            - name: Reset Module
-              icon: mdi:restart-alert
-              show_state: false
-              show_name: true
-              content_layout: icon-top
-              custom_height: 80
-              tap_action:
-                action: perform-action
-                perform_action: script.inovelli_mmwave_control
-                target: {}
-                data:
-                  device: basement_concessions_inovelli_presence
-                  command: reset_mmwave_module
-      bottom_layout: inline
-    rows: 1.625
-    modules:
-      - my_module
-
   - type: markdown
     content: |
-      ### Inovelli mmWave Parameters
-
+      ## Inovelli Parameters
   - type: custom:bubble-card
     card_type: sub-buttons
     show_header_toggle: false
@@ -233,7 +157,57 @@ cards:
               sub_button_type: default
       bottom_layout: rows
     rows: 2.4
+  - type: grid
+    columns: 2
+    square: false
+    cards:
+      - type: markdown
+        content: >-
+          **MmWave Hold Time**
 
+
+          Delay (seconds) after the sensor transitions from **presence →
+          absence** before it reports cleared.
+      - type: markdown
+        content: >-
+          **MmWave Stay Life**
+
+
+          How long the “stay” area lingers after motion stops. Default is
+          **300** (≈15s).
+
+          Lower values can be sub-second (e.g. **1 ≈ 50ms**, **20 ≈ 1s**).
+      - type: tile
+        entity: number.basement_concessions_inovelli_presence_mmwaveholdtime
+        name: Hold Time (s)
+        vertical: false
+        hide_state: true
+        tap_action:
+          action: none
+        hold_action:
+          action: more-info
+        features:
+          - type: numeric-input
+            style: buttons
+          - type: numeric-input
+        features_position: bottom
+      - type: tile
+        entity: number.basement_concessions_inovelli_presence_mmwavestaylife
+        name: Stay Life
+        vertical: false
+        hide_state: true
+        tap_action:
+          action: none
+        hold_action:
+          action: more-info
+        features:
+          - type: numeric-input
+            style: buttons
+          - type: numeric-input
+        features_position: bottom
+  - type: markdown
+    content: |
+      #### mmWave Trigger Boundary (cm)
   - type: grid
     columns: 2
     square: false
@@ -322,4 +296,75 @@ cards:
             style: buttons
           - type: numeric-input
         features_position: bottom
+  - type: markdown
+    content: >-
+      **MQTT Commands**    <small> 
 
+      Last command: {% set s =
+      states('sensor.basement_concessions_inovelli_presence_mmwave_control_commands')
+      %} {{ s if s not in ['unknown','unavailable',''] else '—' }} </small>
+  - type: custom:bubble-card
+    card_type: sub-buttons
+    show_header_toggle: false
+    sub_button:
+      main: []
+      bottom:
+        - name: mmWave Commands
+          buttons_layout: inline
+          group:
+            - name: Set Interference
+              icon: mdi:shield-outline
+              show_state: false
+              show_name: true
+              content_layout: icon-top
+              custom_height: 80
+              tap_action:
+                action: perform-action
+                perform_action: script.inovelli_mmwave_control
+                target: {}
+                data:
+                  device: basement_concessions_inovelli_presence
+                  command: set_interference
+            - name: Clear Interference
+              icon: mdi:shield-off-outline
+              show_state: false
+              show_name: true
+              content_layout: icon-top
+              custom_height: 80
+              tap_action:
+                action: perform-action
+                perform_action: script.inovelli_mmwave_control
+                target: {}
+                data:
+                  device: basement_concessions_inovelli_presence
+                  command: clear_interference
+            - name: Reset Area
+              icon: mdi:crop-free
+              show_state: false
+              show_name: true
+              content_layout: icon-top
+              custom_height: 80
+              tap_action:
+                action: perform-action
+                perform_action: script.inovelli_mmwave_control
+                target: {}
+                data:
+                  device: basement_concessions_inovelli_presence
+                  command: reset_detection_area
+            - name: Reset Module
+              icon: mdi:restart-alert
+              show_state: false
+              show_name: true
+              content_layout: icon-top
+              custom_height: 80
+              tap_action:
+                action: perform-action
+                perform_action: script.inovelli_mmwave_control
+                target: {}
+                data:
+                  device: basement_concessions_inovelli_presence
+                  command: reset_mmwave_module
+      bottom_layout: inline
+    rows: 1.625
+    modules:
+      - my_module
