--- a/scripts/inovelli/entities-defined/clear_hold_on_all_inovelli_presence_controlled_switches.yaml
+++ b/scripts/inovelli/entities-defined/clear_hold_on_all_inovelli_presence_controlled_switches.yaml
@@ -32,7 +32,7 @@ sequence:
             - automation.light_zse11_concessions_motion_cleared_lights_off
         - switch_name: basement_hallway_inovelli_presence
           helper: input_text.basement_hallway_led_color
-          normal_mode: Disabled
+          normal_mode_input_select: input_select.basement_hallway_mmwave_normal_mode
           automation_entity_ids:
             - automation.light_zse11_basement_hallway_motion_detected_lights_on
             - automation.light_zse11_basement_hallway_motion_cleared_lights_off
