--- a/automations/occupancy-based-lighting/light_fp2_server_room_motion_cleared_lights_off.yaml
+++ b/automations/occupancy-based-lighting/light_fp2_server_room_motion_cleared_lights_off.yaml
@@ -7,13 +7,19 @@ triggers:
         is_state('binary_sensor.basement_server_inovelli_presence_occupancy', 'off')
         and is_state('binary_sensor.basement_server_room_aqara_fp2_03_presence_sensor', 'off')
       }}
-    for:
-      hours: 0
-      minutes: 2
-      seconds: 0
 conditions: []
 actions:
+  - delay: >-
+      {% set raw = states('input_select.basement_server_room_occupancy_off_delay') %}
+      {% set d = raw | replace('"','') | replace("'","") | trim %}
+      {{ d if d not in ['unknown','unavailable',''] else '00:02:00' }}
+  - condition: template
+    value_template: |
+      {{
+        is_state('binary_sensor.basement_server_inovelli_presence_occupancy', 'off')
+        and is_state('binary_sensor.basement_server_room_aqara_fp2_03_presence_sensor', 'off')
+      }}
   - action: light.turn_off
     target:
       entity_id: light.basement_server_inovelli_presence
-mode: single
+mode: restart
