--- a/automations/switch-buttons/switch_inovelli_blue_basement_server_press_or_hold_switch_mappings.yaml
+++ b/automations/switch-buttons/switch_inovelli_blue_basement_server_press_or_hold_switch_mappings.yaml
@@ -10,7 +10,7 @@ use_blueprint:
       - action: script.inovelli_toggle_mmwave_hold_led_indicator
         data:
           switch_name: basement_server_inovelli_presence
-          normal_mode: Wasteful Occupancy
+          normal_mode_input_select: input_select.basement_server_room_mmwave_normal_mode
           hold_color: input_text.inovelli_manual_hold
           prev_led_color_helper: input_text.basement_server_led_color
           automation_entity_ids:
