--- a/automations/inovelli_mmwave_normal_mode_sync_input_select.yaml
+++ b/automations/inovelli_mmwave_normal_mode_sync_input_select.yaml
@@ -8,6 +8,7 @@ triggers:
       - input_select.basement_concessions_mmwave_normal_mode
       - input_select.basement_hallway_mmwave_normal_mode
       - input_select.basement_server_room_mmwave_normal_mode
+      - input_select.basement_movie_room_mmwave_normal_mode
     trigger: state
 conditions: []
 actions:
@@ -29,6 +30,8 @@ actions:
                   select.basement_hallway_inovelli_presence_mmwavecontrolwireddevice
                 {% elif trigger.entity_id == 'input_select.basement_server_room_mmwave_normal_mode' %}
                   select.basement_server_inovelli_presence_mmwavecontrolwireddevice
+                {% elif trigger.entity_id == 'input_select.basement_movie_room_mmwave_normal_mode' %}
+                  select.basement_movie_inovelli_presence_mmwavecontrolwireddevice
                 {% else %}
                   none
                 {% endif %}
