--- a/automations/switch-buttons/basement_movie_room_inovelli_blue_switch_behavior.yaml
+++ b/automations/switch-buttons/basement_movie_room_inovelli_blue_switch_behavior.yaml
@@ -16,7 +16,7 @@ use_blueprint:
       - action: script.inovelli_toggle_mmwave_hold_led_indicator
         data:
           switch_name: basement_movie_inovelli_presence
-          normal_mode: Disabled
+          normal_mode_input_select: input_select.basement_movie_room_mmwave_normal_mode
           hold_color: input_text.inovelli_manual_hold
           prev_led_color_helper: input_text.basement_movie_led_color
           automation_entity_ids:
