--- a/cards/basement/movie-room/basement-movie-room-history.yaml
+++ b/cards/basement/movie-room/basement-movie-room-history.yaml
@@ -3,25 +3,79 @@ cards:
   - type: custom:bubble-card
     card_type: pop-up
     hash: "#movie-room-history"
-    button_type: state
+    button_type: name
+    width_desktop: 75vw
+    show_header: true
+    name: Toggle Advanced Settings
+    show_icon: true
+    icon: mdi:tune-variant
+    show_name: true
+    margin: 7px
+    scrolling_effect: false
+    tap_action:
+      action: navigate
+      navigation_path: "#movie-room-advanced"
     sub_button:
       main: []
       bottom: []
-    entity: light.basement_movie_room_lights
-    name: Movie Room
-    icon: mdi:lightbulb-auto-outline
-    width_desktop: 75%
-  - type: entities
-    entities:
-      - entity: binary_sensor.basement_movie_inovelli_presence_occupancy
-        name: mmWave
-      - entity: binary_sensor.basement_rumpus_room_aqara_fp2_01_presence_sensor
-        name: FP2
-      - entity: light.basement_movie_room_lights
-        name: Recessed Lights
-      - entity: light.basement_movie_room_ambient_lighting
-        name: Ambient Lights
-    title: Entities
+    button_action:
+      tap_action:
+        action: navigate
+        navigation_path: "#movie-room-advanced"
+  - type: custom:bubble-card
+    card_type: sub-buttons
+    sub_button:
+      main: []
+      bottom:
+        - name: Sensors
+          buttons_layout: inline
+          group:
+            - entity: binary_sensor.basement_rumpus_room_aqara_fp2_01_presence_sensor
+              name: FP2
+              show_name: true
+              show_state: true
+              show_last_changed: false
+              scrolling_effect: false
+              content_layout: icon-top
+              custom_height: 60
+              show_icon: true
+            - entity: binary_sensor.basement_movie_inovelli_presence_occupancy
+              name: mmWave
+              show_name: true
+              show_state: true
+              show_last_changed: false
+              scrolling_effect: false
+              content_layout: icon-top
+              custom_height: 60
+              show_icon: true
+        - name: Lights
+          buttons_layout: inline
+          group:
+            - entity: light.basement_movie_room_lights
+              name: Recessed
+              show_name: true
+              show_state: true
+              show_last_changed: false
+              show_icon: true
+              content_layout: icon-top
+              custom_height: 60
+              scrolling_effect: false
+            - entity: light.basement_movie_room_ambient_lighting
+              name: Ambient
+              show_name: true
+              show_state: true
+              show_last_changed: false
+              show_icon: true
+              content_layout: icon-top
+              custom_height: 60
+              scrolling_effect: false
+      bottom_layout: rows
+    bottom_layout: rows
+    scrolling_effect: false
+    show_state: true
+    show_attribute: false
+    attribute: friendly_name
+    rows: 2.4
   - type: history-graph
     entities:
       - entity: binary_sensor.basement_movie_inovelli_presence_occupancy
@@ -29,104 +83,192 @@ cards:
       - entity: binary_sensor.basement_rumpus_room_aqara_fp2_01_presence_sensor
         name: FP2
       - entity: light.basement_movie_room_lights
-        name: Recessedd Lights
+        name: Recessed
       - entity: light.basement_movie_room_ambient_lighting
-        name: Ambient Lights
-    title: Light Activation History
+        name: Ambient
     hours_to_show: 12
     grid_options:
       columns: full
-  - type: entities
-    title: Occupancy Control Hold
-    entities:
-      - type: custom:template-entity-row
-        name: Manual/Auto Hold
-        icon: mdi:lock-check
-        state: >
-          {% set manual = states('input_text.inovelli_manual_hold') | int(85) %}
-          {% set auto = states('input_text.inovelli_auto_hold') | int(0) %} {%
-          set s = 'basement_movie_inovelli_presence' %} {% set led1 =
-          states('number.' ~ s ~ '_defaultled1colorwhenon') | int(-1) %}
+  - type: markdown
+    content: >
+      {% set s = 'basement_movie_inovelli_presence' %} {% set manual =
+      states('input_text.inovelli_manual_hold') | int(85) %} {% set auto =
+      states('input_text.inovelli_auto_hold') | int(0) %} {% set led1 =
+      states('number.' ~ s ~ '_defaultled1colorwhenon') | int(-1) %}
 
-          {% if led1 == manual %}
-            Manual Hold
-          {% elif led1 == auto %}
-            Auto Hold
-          {% else %}
-            Clear
-          {% endif %}
-      - type: custom:template-entity-row
-        name: LED ON Colors (1-7)
-        icon: mdi:palette
-        state: " "
-        secondary: >
-          {% set s = 'basement_movie_inovelli_presence' %} {% set ns =
-          namespace(out='') %} {% for i in range(1,8) %}
-            {% set v = states('number.' ~ s ~ '_defaultled' ~ i ~ 'colorwhenon') %}
-            {% set ns.out = ns.out ~ ('， ' if i > 1 else '') ~ v %}
-          {% endfor %} {{ ns.out }}
-      - type: custom:template-entity-row
-        name: OFF Colors (1–7)
-        icon: mdi:palette-outline
-        state: " "
-        secondary: >
-          {% set s = 'basement_movie_inovelli_presence' %} {% set ns =
-          namespace(out='') %} {% for i in range(1,8) %}
-            {% set v = states('number.' ~ s ~ '_defaultled' ~ i ~ 'colorwhenoff') %}
-            {% set ns.out = ns.out ~ ('， ' if i > 1 else '') ~ v %}
-          {% endfor %} {{ ns.out }}
-      - entity: select.basement_movie_inovelli_presence_mmwavecontrolwireddevice
-        name: mmWave Control Wired Device
-      - entity: automation.light_inovelli_movie_room_motion_cleared_lights_off
-        name: Motion → Lights Off
-      - entity: input_text.basement_movie_led_color
-        name: Cached LED Color
-  - type: horizontal-stack
-    cards:
-      - type: button
-        name: Toggle Manual Hold
-        icon: mdi:toggle-switch-outline
-        tap_action:
-          action: call-service
-          service: script.inovelli_toggle_mmwave_hold_led_indicator
-          data:
-            switch_name: basement_movie_inovelli_presence
-            normal_mode: Disabled
-            hold_color: input_text.inovelli_manual_hold
-            prev_led_color_helper: input_text.basement_movie_led_color
-            automation_entity_ids:
-              - automation.light_inovelli_movie_room_motion_cleared_lights_off
-      - type: button
-        name: Set Auto Hold
-        icon: mdi:lock
-        tap_action:
-          action: call-service
-          service: script.inovelli_set_mmwave_hold_led_indicator
-          data:
-            switch_name: basement_movie_inovelli_presence
-            hold_color: input_text.inovelli_auto_hold
-            prev_led_color_helper: input_text.basement_movie_led_color
-            automation_entity_ids:
-              - automation.light_inovelli_movie_room_motion_cleared_lights_off
-      - type: button
-        name: Clear Auto Hold
-        icon: mdi:lock-open-variant
-        tap_action:
-          action: call-service
-          service: script.inovelli_clear_mmwave_hold_restore_led_indicator
-          data:
-            switch_name: basement_movie_inovelli_presence
-            normal_mode: Disabled
-            hold_color: input_text.inovelli_auto_hold
-            prev_led_color_helper: input_text.basement_movie_led_color
-            automation_entity_ids:
-              - automation.light_inovelli_movie_room_motion_cleared_lights_off
-      - type: button
-        name: Apply Cached LED Color
-        icon: mdi:palette
-        tap_action:
-          action: call-service
-          service: script.inovelli_set_led_1_7_color_from_input_text
-          data:
-            switch_name: basement_movie_inovelli_presence
-            color_helper: input_text.basement_movie_led_color
+      {% if led1 == manual %}
+        {% set hold_label = 'Manual Hold' %}
+      {% elif led1 == auto %}
+        {% set hold_label = 'Auto Hold' %}
+      {% else %}
+        {% set hold_label = 'Clear' %}
+      {% endif %}
+
+      {% set mmwave_mode =
+      states('select.basement_movie_inovelli_presence_mmwavecontrolwireddevice')
+      %} {% if mmwave_mode in ['unknown', 'unavailable'] %}
+        {% set mmwave_mode = '—' %}
+      {% endif %}
+
+      {% set on_vals = namespace(out='') %} {% for i in range(1,8) %}
+        {% set v = states('number.' ~ s ~ '_defaultled' ~ i ~ 'colorwhenon') %}
+        {% set on_vals.out = on_vals.out ~ ('， ' if i > 1 else '') ~ v %}
+      {% endfor %}
+
+      {% set off_vals = namespace(out='') %} {% for i in range(1,8) %}
+        {% set v = states('number.' ~ s ~ '_defaultled' ~ i ~ 'colorwhenoff') %}
+        {% set off_vals.out = off_vals.out ~ ('， ' if i > 1 else '') ~ v %}
+      {% endfor %}
+
+      <ha-icon icon="mdi:lock-check"></ha-icon> **Manual/Auto Hold:** {{
+      hold_label }}
+
+      <ha-icon icon="mdi:motion-sensor"></ha-icon> **mmWave Mode:** {{
+      mmwave_mode }}
+
+      <ha-icon icon="mdi:palette"></ha-icon> **LED ON Colors (1–7):** {{
+      on_vals.out }}
+
+      <ha-icon icon="mdi:palette-outline"></ha-icon> **LED OFF Colors (1–7):**
+      {{ off_vals.out }}
+  - type: custom:bubble-card
+    card_type: sub-buttons
+    sub_button:
+      main: []
+      bottom:
+        - name: Automations
+          buttons_layout: inline
+          group:
+            - entity: automation.light_inovelli_movie_room_motion_cleared_lights_off
+              name: No Motion Turns Off Lights
+              show_name: true
+              show_state: true
+              content_layout: icon-top
+              custom_height: 60
+        - name: Config Drop Down
+          buttons_layout: inline
+          group:
+            - entity: input_select.basement_movie_room_mmwave_normal_mode
+              sub_button_type: select
+              name: mmWave Control Mode
+              show_name: true
+              show_last_changed: false
+              show_state: true
+              icon: mdi:format-list-bulleted
+              content_layout: icon-left
+              custom_height: 60
+            - entity: input_select.basement_movie_room_occupancy_off_delay
+              sub_button_type: select
+              name: Zone Off Delay
+              show_name: true
+              show_last_changed: false
+              show_state: true
+              icon: mdi:timer-outline
+              content_layout: icon-left
+              custom_height: 60
+      bottom_layout: rows
+    bottom_layout: rows
+    rows: "2.4"
+  - type: custom:mod-card
+    card:
+      type: entities
+      entities:
+        - entity: input_text.basement_movie_led_color
+          name: Cached LED Color
+      card_mod:
+        style: |
+          ha-card { padding: 0 !important; }
+          .card-content { padding: 0px 12px 6px 12px !important; }
+          #states { padding-top: 0 !important; margin-top: 0 !important; }
+    style: |
+      ha-card { padding: 0 !important; }
+  - type: custom:bubble-card
+    card_type: sub-buttons
+    sub_button:
+      main: []
+      bottom:
+        - buttons_layout: inline
+          group:
+            - name: Toggle
+              icon: mdi:hand-back-left
+              tap_action:
+                action: perform-action
+                perform_action: script.inovelli_toggle_mmwave_hold_led_indicator
+                target: {}
+                data:
+                  switch_name: basement_movie_inovelli_presence
+                  normal_mode_input_select: input_select.basement_movie_room_mmwave_normal_mode
+                  hold_color: input_text.inovelli_manual_hold
+                  prev_led_color_helper: input_text.basement_movie_led_color
+                  automation_entity_ids:
+                    - automation.light_inovelli_movie_room_motion_cleared_lights_off
+              entity: script.inovelli_toggle_mmwave_hold_led_indicator
+              show_state: false
+              show_name: true
+              show_last_changed: false
+              show_last_updated: false
+              content_layout: icon-top
+              fill_width: true
+              custom_height: 80
+              scrolling_effect: false
+            - entity: script.inovelli_set_mmwave_hold_led_indicator
+              name: Set Auto Hold
+              icon: mdi:lock
+              show_name: true
+              show_last_changed: false
+              show_state: false
+              tap_action:
+                action: perform-action
+                perform_action: script.inovelli_set_mmwave_hold_led_indicator
+                target: {}
+                data:
+                  switch_name: basement_movie_inovelli_presence
+                  hold_color: input_text.inovelli_auto_hold
+                  prev_led_color_helper: input_text.basement_movie_led_color
+                  automation_entity_ids:
+                    - automation.light_inovelli_movie_room_motion_cleared_lights_off
+              content_layout: icon-top
+              custom_height: 80
+              scrolling_effect: false
+            - entity: script.inovelli_clear_mmwave_hold_restore_led_indicator
+              show_name: true
+              show_state: false
+              name: Clear Auto Hold
+              icon: mdi:lock-open-variant
+              show_background: true
+              scrolling_effect: false
+              tap_action:
+                action: perform-action
+                perform_action: script.inovelli_clear_mmwave_hold_restore_led_indicator
+                target: {}
+                data:
+                  switch_name: basement_movie_inovelli_presence
+                  normal_mode_input_select: input_select.basement_movie_room_mmwave_normal_mode
+                  hold_color: input_text.inovelli_auto_hold
+                  prev_led_color_helper: input_text.basement_movie_led_color
+                  automation_entity_ids:
+                    - automation.light_inovelli_movie_room_motion_cleared_lights_off
+              content_layout: icon-top
+              custom_height: 80
+            - entity: script.inovelli_set_led_1_7_color_from_input_text
+              name: Set LED Color
+              icon: mdi:palette
+              show_name: true
+              tap_action:
+                action: perform-action
+                perform_action: script.inovelli_set_led_1_7_color_from_input_text
+                target: {}
+                data:
+                  switch_name: basement_movie_inovelli_presence
+                  color_helper: input_text.basement_movie_led_color
+              content_layout: icon-top
+              fill_width: true
+              custom_height: 80
+              show_background: true
+              scrolling_effect: false
+          name: Hold Buttons
+      bottom_layout: inline
+    rows: 1.625
+    modules:
+      - my_module
+    show_header_toggle: false
