Upgrade Basement Bathroom

--- a/scripts/inovelli/entities-defined/clear_hold_on_all_inovelli_presence_controlled_switches.yaml
+++ b/scripts/inovelli/entities-defined/clear_hold_on_all_inovelli_presence_controlled_switches.yaml
@@ -19,6 +19,10 @@ sequence:
           helper: input_text.basement_lower_staircase_led_color
         - switch_name: basement_bathroom_vanity_inovelli_presence
           helper: input_text.basement_bathroom_vanity_led_color
+          normal_mode_input_select: input_select.basement_bathroom_mmwave_normal_mode
+          automation_entity_ids:
+            - automation.light_inovelli_basement_bathroom_motion_detected_fan_light_on
+            - automation.light_inovelli_basement_bathroom_motion_cleared_fan_light_off
         - switch_name: basement_movie_inovelli_presence
           helper: input_text.basement_movie_led_color
           normal_mode_input_select: input_select.basement_movie_room_mmwave_normal_mode
