--- a/automations/switch-buttons/switch_inovelli_blue_basement_bathroom_vanity_press_or_hold_switch_mappings.yaml
+++ b/automations/switch-buttons/switch_inovelli_blue_basement_bathroom_vanity_press_or_hold_switch_mappings.yaml
@@ -10,6 +10,9 @@ use_blueprint:
       - action: script.inovelli_toggle_mmwave_hold_led_indicator
         data:
           switch_name: basement_bathroom_vanity_inovelli_presence
-          normal_mode: Occupancy (default)
+          normal_mode_input_select: input_select.basement_bathroom_mmwave_normal_mode
           hold_color: input_text.inovelli_manual_hold
           prev_led_color_helper: input_text.basement_bathroom_vanity_led_color
+          automation_entity_ids:
+            - automation.light_inovelli_basement_bathroom_motion_detected_fan_light_on
+            - automation.light_inovelli_basement_bathroom_motion_cleared_fan_light_off
