--- a/automations/occupancy-based-lighting/light_snzb_06p_rumpus_room_motion_cleared_lights_off.yaml
+++ b/automations/occupancy-based-lighting/light_snzb_06p_rumpus_room_motion_cleared_lights_off.yaml
@@ -9,6 +9,14 @@ triggers:
       }}
 conditions: []
 actions:
+  - condition: template
+    value_template: |
+      {# Only run when hold is clear #}
+      {% set s = 'basement_rumpus_room_inovelli_presence' %}
+      {% set manual = states('input_text.inovelli_manual_hold') | int(85) %}
+      {% set auto = states('input_text.inovelli_auto_hold') | int(0) %}
+      {% set led1 = states('number.' ~ s ~ '_defaultled1colorwhenon') | int(-1) %}
+      {{ led1 != manual and led1 != auto }}
   - delay: >-
       {% set raw = states('input_select.basement_rumpus_room_occupancy_off_delay') %}
       {% set d = raw | replace('"','') | replace("'","") | trim %}
@@ -20,6 +28,14 @@ actions:
         and is_state('binary_sensor.basement_rumpus_aqara_fp300_presence_presence', 'off')
         and is_state('binary_sensor.basement_rumpus_room_inovelli_presence_occupancy', 'off')
       }}
+  - condition: template
+    value_template: |
+      {# Re-check hold state after the delay #}
+      {% set s = 'basement_rumpus_room_inovelli_presence' %}
+      {% set manual = states('input_text.inovelli_manual_hold') | int(85) %}
+      {% set auto = states('input_text.inovelli_auto_hold') | int(0) %}
+      {% set led1 = states('number.' ~ s ~ '_defaultled1colorwhenon') | int(-1) %}
+      {{ led1 != manual and led1 != auto }}
   - action: light.turn_off
     target:
       entity_id: light.basement_rumpus_room_lights
